# local_lakehouse_pipeline

./: README.md  docker-compose.yml  pyproject.toml
dbt_trino/: .user.yml  dbt_project.yml  profiles.yml
dbt_trino/models/: sources.yml
dbt_trino/models/marts/: fct_daily_trips.sql  fct_hourly_revenue.sql
dbt_trino/models/staging/: stg_yellow_trips.sql
doc/: ICEBERG_LEARNING.md  dagster.md  dbt_README.md
docker/trino/catalog/: iceberg.properties
lakehouse_pipeline/: definitions.py
lakehouse_pipeline/assets/: dbt_assets.py  ingestion.py
lakehouse_pipeline/resources/: trino_resource.py
scripts/: insert_taxi_data.py
