[project]
name = "local-lakehouse-pipeline"
version = "0.1.0"
description = "Local lakehouse pipeline with Dagster, MinIO, Iceberg, Trino, and dbt"
requires-python = ">=3.10"
dependencies = [
    "pyarrow>=18.0.0",
    "trino>=0.329.0",
    "pandas>=2.2.0",
    "requests>=2.32.0",
    "boto3>=1.35.0",
    "dbt-trino>=1.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lakehouse_pipeline"]
